--- a/src/app/Home.html
+++ b/src/app/Home.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="container">
     <h1 class="pageTitle">{{iproducts?.title}}</h1>
     <p>{{iproducts?.description}}</p>
 </div>
