Updated files with all functionality. Directory structure remaining

--- a/src/app/Companies.html
+++ b/src/app/Companies.html
@@ -1,20 +1,17 @@
-<div class="footer">
+<div class="container">
     <h1 class="pageTitle">Companies</h1>
-    <table class="grid">
-        <tr>
+    <div class="row gridHeader">    
+    <div class="col-md-2">Logo</div>
+    <div class="col-md-1">Title</div>
+    <div class="col-md-5">Description</div>
+    <div class="col-md-4">URL</div>
         
-            <th>Logo</th>
-            <th>Title</th>
-            <th>Description</th>
-            <th>URL</th>
-        
-        </tr>
-        <tr class="gridRow" *ngFor="let item of iproducts?.rows | company" (click)="CompanyRowClick(item)">
-            <td><img alt="" src="{{item.imageHref}}" border="3" height="100" width="100" /></td>
-            <td>{{item.title}}</td>
-            <td>{{item.description}}</td>
-            <td><a href="{{item.url}}">{{item.url}}</a> </td>
-        </tr>
-    </table>
-    
+</div>
+<div class="row gridRow" *ngFor="let item of iproducts?.rows | company" (click)="CompanyRowClick(item)">
+    <div class="col-md-2"><img alt="" src="{{item.imageHref}}" border="3" height="100" width="100" /></div>
+    <div class="col-md-1">{{item.title}}</div>
+    <div class="col-md-5">{{item.description}}</div>
+    <div class="col-md-4"><a href="{{item.url}}">{{item.url}}</a></div>
+</div>
+
 </div>
