--- a/src/app/ProductDetails.html
+++ b/src/app/ProductDetails.html
@@ -3,7 +3,7 @@
     
         <div class="row">
             <div class="col-sm-2">Logo</div>
-            <div class="col-sm-5"><img alt="" id="productImage" src="{{iproducts.imageHref}}" border="3" height="100" width="100" /></div>
+            <div class="col-sm-5"><img alt="" id="productImage" src="{{iproducts.imageHref}}" /></div>
             <div class="col-sm-5"></div>
         </div>
         <div class="row">
@@ -27,4 +27,5 @@
             <div class="col-sm-5"><button type="button" id="printbtn" class="btn btn-primary" value="Download as PDF" (click)="DownloadPDF(iproducts)">Download PDF</button> </div>
             <div class="col-sm-5"></div>
         </div>
+    
 </div>
